<resources>
    <string name="app_name">Recpic</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">EMAIL (*)</string>
    <string name="hint_password">PASSWORD (*)</string>
    <string name="hint_confirm_password">CONFIRM PASSWORD (*)</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="calendar">CALENDAR</string>
    <string name="txt_sign_up"></string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_login">Login</string>
    <string name="btn_foget">Forgot</string>
    <string name="sign_up_title">Sign up with your social account</string>
    <string name="sign_in_title">Sign in with your social account</string>
    <string name="sign_up_or">or sign up your email address</string>
    <string name="sign_in_or">or sign in your email address</string>
    <string name="sign_up_bottom">By signing up, you agree to our</string>
    <string name="sign_up_terms"><b>Terms of Services </b> and <b>Policy</b></string>
    <string name="forgot_password">Forgot password</string>
    <string name="dont_have_account">Don\'t have an account? <b>Signup</b></string>
    <string name="forgot">FORGOT</string>
    <string name="forgot_content">Enter the email address that used to register for \n Recpic and will be send you an email shortly which \n allows you to change your password</string>
    <string name="forget_login">Already have an acount? <b>Login</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">MY PROFILE</string>
    <string name="pass_require">Password change require current password</string>
    <string name="current_pass_word">CURRENT PASSWORD</string>
    <string name="new_pass_word">NEW PASSWORD</string>
    <string name="confirm_pass_word">CONFIRM PASSWORD</string>
    <string name="profile_current_passowrd">CURRENT PASSWORD</string>
    <string name="profile_new_password">NEW PASSWORD</string>
    <string name="profile_confirm_password">CONFIRM PASSWORD</string>
    <string name="note_add_tilte">Add new note</string>
    <string name="basic_setting">BASIC SETTING</string>
    <string name="s_profile">My profile</string>
    <string name="s_day">Starting Date</string>
    <string name="s_language">Choose Language</string>
    <string name="preferences">PREFERENCES</string>
    <string name="s_card">Card(SMS) Setting</string>
    <string name="s_backup">Back up &amp; Export Data</string>
    <string name="s_noti">Notification Toggle</string>
    <string name="s_auto">Automatically save photos</string>
    <string name="etc">ETC</string>
    <string name="s_faq">FAQ</string>
    <string name="s_invite">Invite friends to Recpic</string>
    <string name="s_send_email">Send email to Recpic team</string>
    <string name="s_about">About</string>
    <string name="s_sign_out">Sign out</string>
    <string name="note_title">DEFAULT TITLE</string>
    <string name="add_note_title">Default title</string>
    <string name="content_note">Default content</string>
    <string name="menu_edit_note">Edit</string>
    <string name="menu_remove_note">Remove</string>
    <string name="ac_add_note">DEFAULT TITLE</string>
    <string name="ac_home">HOME</string>
    <string name="ac_budget">BUDGET</string>
    <string name="ac_asset">ASSET ANALYSIS</string>
    <string name="ac_note">NOTE</string>
    <string name="ac_repeat">REPEAT RECORDS</string>
    <string name="ac_payment">PAYMENT PLAN</string>
    <string name="ac_setting">SETTINGS</string>
    <string name="ac_noti">NOTIFICATION</string>
    <string name="terms">TERMS OF SERVICE</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="facebook_app_id">105524669953936</string>
    <string name="type_in">TYPE IN</string>
    <string name="expense_food">Food</string>
    <string name="expense_trans">Transportation</string>
    <string name="expense_social">Social Life</string>
    <string name="expense_house">Household</string>
    <string name="expense_edu">Education</string>
    <string name="expense_health">Health</string>
    <string name="expense_travel">Travel &amp; Leisure</string>
    <string name="expense_fashion">Fashion &amp; Beauty</string>
    <string name="expense_Tax">Tax / Interest / Insurance</string>
    <string name="expense_finance">Finance</string>
    <string name="expense_residence">Residense / Communicate</string>
    <string name="expense_business">Bussiness</string>
    <string name="expense_discount">Discount</string>
    <string name="expense_etc">Etc</string>
    <string name="income_main">Main Income</string>
    <string name="income_secondary">Secondary Income</string>
    <string name="income_saving">Saving / Insurance</string>
    <string name="income_loan">Loan</string>
    <string name="ex_total">Total value (*)</string>
    <string name="ex_receive">Receive method</string>
    <string name="ex_detail_setting">DETAIL SETIING</string>
    <string name="ex_product">Product name </string>
    <string name="ex_payment">Single payment</string>
    <string name="ex_col">Collapse</string>
    <string name="ex_quatity">Quantity  </string>
    <string name="ex_no_repeat">No repeat</string>
    <string name="ex_palce">Place</string>
    <string name="ex_store">Store name</string>
    <string name="ex_pay_method">Payment method</string>
    <string name="ex_pru">Purveyance</string>
    <string name="ex_memo">Memo</string>
    <string name="per_info">Personal infomation</string>
    <string name="per_age">Age</string>
    <string name="per_gender">Gender</string>
    <string name="asset_analysis">asset analysis</string>
    <string name="per_content">
        ASSET ANALYSIS IS BASED ON YOUR AGE AND \nGENDER OF THE GRAPH REPRESENTS THE \n
        AVERAGE PROPERTY UP TO 65 YEARS \n\n\n
        INITIAL DATA ARE ALL BASED ON STATISTICS \n
        SHOWING THE AVERAGE AMOUT\n\n\n
        LOOK AT THE GRAPH OF YOUR OWN PROPETY IF\n
        YOU WANT ME THEN TRY TO MODIFY SAW THE AVERAGE
    </string>
    <string name="per_content_con">ASSET ANALYSIS FEATURE IS CURRENTLY IN BETA \n\n
                                    THE DATA CREATED BASED ON THE AVERAGE VALUE, \n
                                    ENTER THE USER\'S PERSONAL DATA TO GET A MORE\n
                                    ACCURATE RESULT
    </string>
    <string name="per_load">Load data</string>
    <string name="per_dialog_help">Personal information HELP</string>
    <string name="per_dialog_info_1">* THE AGE AND GENDER CAN BE \n
                                    EDITED IN THE SETTINGS</string>
    <string name="per_dialog_info_2">* PLEASE ENTER ACCURATE \n
                                    INFORMATION FOR BETTER\n
                                    ANALYSIS
    </string>
    <string name="per_dialog_confirm">Confirm</string>
    <string name="ana_dialog_help">Asset Analysis HELP</string>
    <string name="ana_info_1">* 65 OLD PROPERTY PREDICTIONS ARE\n BASED ON THE ANALYSIS.</string>
    <string name="ana_info_2">* CAN DETERMINE THE FUTURE \n FLOW OF YOUR ASSETS.</string>
    <string name="ana_info_3">* THE RESULT WILL BE MADE IN THE \n BUDGET AND YOUR AVERATE SET OF \n DATA, REAL ASSETS AND ARE \n PLEASE TO INFORM YOU THAT \n THERE IS A DIFFERENCE.</string>
    <string name="sms_title">Problem reading SMS data</string>
    <string name="sms_info">Sorry, this sms data format is not currently \n supported in Recpic. \n Please report with card name and SMS \n content</string>
    <string name="sms_report_now">Report now</string>
    <string name="sms_cancel">Cancel</string>
    <string name="send_email_to_repic">SEND EMAIL TO THE RECPIC</string>
    <string name="send_title">Briefly explain what happened</string>
    <string name="send_info">We\' will revise your report and reply to your email as
    soon as possible. Thank you very much for talking your  time to report</string>
    <string name="search_history">My history</string>
    <string name="search_price">Compare price</string>
    <string name="search_enter">Enter keyword to search</string>
    <string name="search_loation">Please enter your location</string>
    <string name="search_all">All</string>
    <string name="search_pro">Product</string>
    <string name="search_store">Store</string>
    <string name="search_memo">Memo</string>
    <string name="search_address">Address</string>
    <string name="search_low">Lowest</string>
    <string name="search_high">Highest</string>
    <string name="search_range">Range</string>
    <string name="search_dis">Distance</string>
    <string name="search_close">Close</string>
    <string name="search_far">Far</string>
    <string name="search_po">Popular</string>
    <string name="search_unpo">Unpopular</string>
    <string name="search_date">Date</string>
    <string name="search_recent">Recent</string>
    <string name="search_old">Old</string>
    <string name="search_your_address">Search your address</string>
    <string name="search_result_his">RESULT BASED ON MY RECORDS</string>
    <string name="search_result_price">RESULT BASED ON REPIC\'S RECORDS</string>
    <string name="search_total">Total</string>
    <string name="search_amount">Amount</string>
    <string name="search_pri">Rice</string>
    <string name="search_discover">Discover items around you</string>
    <string name="search_expense">Discover your expense</string>
    <string name="search_location">SEARCH FOR LOCATION</string>
    <string name="location_use_current">Use current location</string>
    <string name="location_address">Use profile address</string>
    <string name="location_note">Please add your favourite locations by clicking star icon next to the address</string>
    <string name="location_enter">Enter your location</string>
    <string name="noti_news">News</string>
    <string name="noti_pen">Pending</string>
    <string name="noti_re">Rejected</string>
    <string name="noti_com">Completed</string>
    <string name="noti_his">History</string>
    <string name="repeat_dialog">
        GUIDANCE
    </string>
    <string name="repeat_dialog_info">
        * 02.01 version of the previous data remains. \n\n
        * 02.01 version after th input data is deleted when deleting anay repeating data. \n\n
        * Repeat setting of a data for the next spending period is entered.\n\n
    </string>
    <string name="payment_dialog_info">
        * HOME-EXPENSE recotds that has payment plan could be edited only in menu-card payment setting.\n\n
        * Payment plan can be created when the receipt has payment plane, and the user enter payment plan in "type in" feature. \n\n
        * When there are more than 2 products in a receipt, editing one product will be applied to all the products that belongs to the receipt. \n\n
        * When the payment plan is not done, no more records belong to the payment plane will be written. \n\n
        * If the payment plan is not done, the expense record will be written as below. \n\n
        * If 3 months payment plan has begin in January 10th and the user delete record in payment plan list on February 13th, then January and February reords will still be existed and the record will not be showed form Marth.

    </string>
    <string name="my_select_first">Select first month</string>
    <string name="my_select_second">Select second month</string>
    <string name="profile_pic">Profile picture</string>
    <string name="select_pic">Select picture from gallery</string>
    <string name="take_pic">Take a picture from camera</string>
    <string name="close">Close</string>
    <string name="dia_some_things">Something is not woking</string>
    <string name="dia_genaral">Genaral Feedback</string>
</resources>