<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:gravity="center|top"
    android:orientation="vertical"
    android:minWidth="300dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_pic"
        android:gravity="center"
        android:background="@color/boder_user_profile"
        android:textColor="@color/colorPrimaryDark"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/txt_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginLeft="0dp"
        android:textSize="14sp"
        android:text="@string/select_pic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/boder_user_profile"/>

    <TextView
        android:id="@+id/txt_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginLeft="0dp"
        android:textSize="14sp"
        android:text="@string/take_pic" />

    <LinearLayout
        android:id="@+id/lnConfirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="7dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/per_dialog_confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
